--- a/CoreWebApi/appsettings.json
+++ b/CoreWebApi/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "Cors": {
     "AllowedHosts": ["http://localhost:5173"]
+  },
+   "ConnectionStrings": {
+    "SqlServerConnection": "Server=sql_server_container;Database=BasChallenge;User Id=sa;Password=BasBackend!;TrustServerCertificate=True"
   }
+  
 }
