--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../Domain/Domain.csproj" />
     <ProjectReference Include="../Exceptions/Exceptions.csproj" />
     <ProjectReference Include="../Infraestructure/Infraestructure.csproj" />
   </ItemGroup>
