--- a/CoreWebApi/CoreWebApi.csproj
+++ b/CoreWebApi/CoreWebApi.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
+<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
+<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
@@ -16,6 +18,10 @@
  <ItemGroup>
    <ProjectReference Include="../Common/Common.csproj" />
    <ProjectReference Include="../Infraestructure/Infraestructure.csproj" />
+ </ItemGroup>
+
+ <ItemGroup>
+   <Folder Include="ApiData/" />
  </ItemGroup>
 
 </Project>
