--- a/Infraestructure/Infraestructure.csproj
+++ b/Infraestructure/Infraestructure.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
+<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
+<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../Domain/Domain.csproj" />
   </ItemGroup>
 
 </Project>
