--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: CoreWebApi/Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-        - ConnectionStrings__SqlServerConnection=Server=sql_server_container;Database=BasChallenge;User Id=sa;Password=BasBackend!;TrustServerCertificate=True
+      - ConnectionStrings__SqlServerConnection=${CONNECTIONSTRINGS__SQLSERVERCONNECTION}
     networks:
       - mynetwork
     ports:
@@ -21,7 +21,7 @@ services:
     image: mcr.microsoft.com/mssql/server:latest
     environment:
       - ACCEPT_EULA=Y
-      - SA_PASSWORD=BasBackend!
+      - SA_PASSWORD=${MSSQL_SA_PASSWORD}
     networks:
       - mynetwork
     ports:
