feat se agregan nuevos modelos, y campos sobre la entidad usuario , se corrige cadena de conexion

--- a/CoreWebApi/appsettings.json
+++ b/CoreWebApi/appsettings.json
@@ -10,7 +10,7 @@
     "AllowedHosts": ["http://localhost:5173"]
   },
    "ConnectionStrings": {
-    "SqlServerConnection": "Server=sql_server_container;Database=BasChallenge;User Id=sa;Password=BasBackend!;TrustServerCertificate=True"
+    "SqlServerConnection": "Server=localhost;Database=BasChallenge;User Id=sa;Password=BasBackend!;TrustServerCertificate=True"
   }
   
 }
