--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,14 @@ services:
     environment:
       - ACCEPT_EULA=Y
       - SA_PASSWORD=${MSSQL_SA_PASSWORD}
+    volumes:
+      - mssql_data:/var/opt/mssql 
     networks:
       - mynetwork
     ports:
       - "1433:1433"
 
+volumes:
+  mssql_data:
 networks:
   mynetwork:
