--- a/CoreWebApi/appsettings.json
+++ b/CoreWebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Cors": {
-    "AllowedHosts": ["http://localhost:5173"]
+    "AllowedHosts": ["http://localhost:5173", "http://localhost:5174", "http://localhost:5175"]
   },
    "ConnectionStrings": {
     "SqlServerConnection": "Server=localhost;Database=BasChallenge;User Id=sa;Password=BasBackend!;TrustServerCertificate=True"
